Updated headers and spacing of amazon

--- a/amazon.html
+++ b/amazon.html
@@ -75,7 +75,7 @@
           <div class="casestudy-component">
             <h3>FINAL SCREENS</h3>
             <div class="component-left">
-              <p class="component-text component-header">Amazon Music Mobile App, Finding a Bundle Flow</p>
+              <p class="component-text component-header"> Finding a Bundle </p>
               <video width="auto" height="430" autoplay loop muted preload="auto">
                 <source src="videos/amazon-find-search.mov" type="video/mp4">
                 Your browser does not support the video tag.
@@ -83,7 +83,7 @@
             </div>
 
             <div class="component-right">
-              <p class="component-text component-header">Amazon Music Mobile App, Bundle Detail Page</p>
+              <p class="component-text component-header"> Bundle Detail Page</p>
               <video width="auto" height="430" autoplay loop muted preload="auto">
                 <source src="videos/amazon-bdp.mov" type="video/mp4">
                 Your browser does not support the video tag.
@@ -91,7 +91,7 @@
             </div>
 
             <div class="component-center">
-              <p class="component-text component-header">Amazon Music for Artists Desktop App, Creating a Bundle Flow</p>
+              <p class="component-text component-header"> Creating a Bundle Flow</p>
               <video width="550" height="auto" autoplay loop muted preload="auto">
                 <source src="videos/amazon-desktop-demo.mov" type="video/mp4">
                 Your browser does not support the video tag.
@@ -102,10 +102,11 @@
 
           <!-- [START] User Problems  -->
           <div class="casestudy-component">
-            <h2><span class="h2-unbold">⦿</span> User Problems</h2>
+            <h3>USER PROBLEMS</h3>
+
             <div class="component-left">
               <p class="component-text component-header">
-                Artists aren’t able to earn a living as a musician based off revenue from streaming            
+                Artists aren’t able to earn a living solely based off streaming revenue            
               </p>
             </div>
             <div class="component-right">
@@ -118,7 +119,7 @@
 
           <!-- [START] Target Customer  -->
           <div class="casestudy-component">
-            <h2><span class="h2-unbold">⦿</span> Target Customer</h2>
+            <h3>OUR TARGET CUSTOMER</h3>
 
             <p class="component-text component-header">
               Super fan who has invested both time and money into their favorite Artist(s)      
@@ -134,7 +135,7 @@
 
           <!-- [START] How Might we  -->
           <div class="casestudy-component">
-            <h2><span class="h2-unbold">⦿</span> How might we...</h2>
+            <h3>HOW MIGHT WE...</h3>
 
             <div class="component-left">
               <p class="component-text component-header">
@@ -150,7 +151,7 @@
 
           <!-- [START] Competitive Analysis  -->
           <div class="casestudy-component">
-            <h2><span class="h2-unbold">⦿</span> Competitive Analysis</h2>
+            <h3>COMPETITIVE ANALYSIS</h3>
 
             <p class="component-text">
               In order to better understand the problem space, I looked to other companies, creating my own definition while gathering various advantages and disadvantages.          
@@ -198,7 +199,7 @@
 
           <!-- [START] Generative and Evaluative User Research  -->
           <div class="casestudy-component">
-            <h2><span class="h2-unbold">⦿</span> Generative and Evaluative User Research</h2>
+            <h3>GENERATIVE AND EVALUATIVE USER RESEARCH</h3>
 
             <p class="component-text">
               After synthesizing insights from the Competitive Audit and Analysis, I started to validate my assumptions by talking with my customers.            
@@ -217,7 +218,7 @@
 
           <!-- [START] Customer Archetypes  -->
           <div class="casestudy-component">
-            <h2><span class="h2-unbold">⦿</span> Customer Archetypes</h2>
+            <h3>CUSTOMER ARCHETYPES</h3>
 
             <p class="component-text component-header">
               Based on behaviors observed during card sort, I created super fan archetypes that highlights nuances between different types of fans            
@@ -239,7 +240,8 @@
 
            <!-- [START] Product Bundle Recommendations  -->
            <div class="casestudy-component">
-            <h2><span class="h2-unbold">⦿</span> Product Bundle Recommendations</h2>
+            <h3>PRODUCT BUNDLE RECOMMENDATIONS</h3>
+
             <p class="component-text component-header">
               Synthesizing both the competitive analysis and research insights, I created 4 different fan bundle recommendations that target at least one type of super fan            
             </p>
@@ -261,10 +263,11 @@
 
           <!-- [START] Final Screens  -->
           <div class="casestudy-component">
-          <h2><span class="h2-unbold">⦿</span> Final Prototypes</h2>
-          <p class="component-text">
-            After constructing the product bundles, the challenge now became:           
-          </p>
+            <h3>FINAL PROTOTYPES</h3>
+
+            <p class="component-text">
+              After constructing the product bundles, the challenge now became:           
+            </p>
 
           <div class="component-left">
             <p class="component-text">
@@ -456,7 +459,7 @@
           <p class="component-text">And lastly, thinking about the Bundle Detail page as an evolving entity</p>
           <div class="component-3col">
             <p class="component-text">
-              Creating excitement before the bundle is released through <span class="bold">Artist polls and wishlists</span>
+              Creating excitement before <br>the bundle is released through <br><span class="bold">Artist polls and wishlists</span>
             </p>
 
             <video autoplay loop muted preload="auto" class="full-size">
@@ -467,7 +470,7 @@
 
           <div class="component-3col">
             <p class="component-text">
-              <span class="bold">Emphasizing scarcity and ephemerality</span> to increase the perceived value for fans            
+              <span class="bold">Emphasizing scarcity <br>and ephemerality</span> to increase <br>the perceived value for fans            
             </p>
 
             <video autoplay loop muted preload="auto" class="full-size">
@@ -478,7 +481,7 @@
 
           <div class="component-3col">
             <p class="component-text">
-              Transforms into an <span class="bold">archive, a digital collectible</span> for super fans to continually engage with 
+              Transforms into an <span class="bold">archive, <br> a digital collectible</span> for super fans <br>to continually engage with 
             </p>
 
             <video autoplay loop muted preload="auto" class="full-size">
