Updated home page text and changed font to be more readable

--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
     <p id="intro">
       <span class="blue-text"> Hi, I’m Kelly with an i. </span>
       <span class="yellow-highlight">Product designer</span> by trade, 
-      analyzer of common nouns at heart. My body resides in 
+      enthusiast of common nouns at heart. My body resides in 
       <span class="red-underline">San Francisco</span> 
-      but my being is continuously foraging for paths that provide people 
-      with meaningful interactions.</p>
+      but my being is continuously testing the limits of my learning curve for life.</p>
   </div>
 
   <div class="content" id="recent-work">
